# RTPlayStep

./: Info.plist  MainWindow.xib  README.md  app_info_setup.bat
OSX/English.lproj/: MainMenu.xib
OSX/RTPlayStep.xcodeproj/: project.pbxproj
Resources-iPad/: MainWindow-iPad.xib
android/: AndroidManifest.xml  app_info_setup.bat  build.xml
android/jni/: Android.mk
android/res/values/: strings.xml
android/src/: Main.java
linux/: CMakeLists.txt  linux_compile.sh
script/: BuildSourcePackage.bat  MakeWindowsStandAloneZip.bat  ZipMac_RTAddHocVersion.bat
source/: App.cpp  App.h  GameLogicComponent.cpp  GameLogicComponent.h
windows_vs2017/: RTPlayStep.sln  winRTPlayStep.vcxproj  winRTPlayStep.vcxproj.filters
